:bug: Timeline overflow hidden

--- a/src/scss/layout/_years.scss
+++ b/src/scss/layout/_years.scss
@@ -20,16 +20,24 @@
     }
 }
 .container-timeline{
-    &:after{
+    &:before{
         content: '';
-        // border-right: 1px solid rgba($blue, 0.5);
         border-right: 1px solid rgba(#000, 0.2);
         position: absolute;
         top: 0;
-        // bottom: 63px;
         bottom: 13px;
         width: 23.8%;
         left: 30px;
+    }
+    &:after{
+        content: '';
+        height: 100px;
+        border-right: 1px solid $white;
+        position: absolute;
+        bottom: -88px;
+        width: 23.8%;
+        left: 30px;
+        z-index: 2;
     }
 }
 .container-year-landmark{
